cmake_minimum_required(VERSION 3.10)
project(cp_algorithms)

set(CMAKE_CXX_STANDARD 17)

#add_executable(cp_algorithms basic_algorithms/find_common_elements_counts_two_array.cpp)
#add_executable(cp_algorithms basic_algorithms/subset.cpp)
#add_executable(cp_algorithms basic_algorithms/generate_permutations.cpp)
#add_executable(cp_algorithms codeforces/a.cpp)
#add_executable(cp_algorithms codeforces/b.cpp)
#add_executable(cp_algorithms basic_algorithms/n_queen_problem_backtracking.cpp)
#add_executable(cp_algorithms codeforces/c.cpp)
#add_executable(cp_algorithms stl/stl.cpp)
#add_executable(cp_algorithms codeforces/f.cpp)
#add_executable(cp_algorithms codeforces/e.cpp)
#add_executable(cp_algorithms codeforces/word_cap.cpp)
#add_executable(cp_algorithms codeforces/stone_on_table.cpp)
#add_executable(cp_algorithms codeforces/wrong_substractuion.cpp)
#add_executable(cp_algorithms codeforces/elephant.cpp)
#add_executable(cp_algorithms codeforces/temp.cpp)
#add_executable(cp_algorithms codeforces/temp.cpp)
#add_executable(cp_algorithms codeforces/rotaration_matching.cpp)
#add_executable(cp_algorithms codeforces/touble_sort.cpp)


#add_executable(graphs graphs/arodj.cpp)
#add_executable(graphs graphs/dfs.cpp)
#add_executable(graphs graphs/bfs.cpp)
add_executable(graphs graphs/bellman_ford_algorithm.cpp)